k8s/game-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-api
spec:
  selector:
    app: game-api
  ports:
    - port: 8000
      targetPort: 8000
