k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snake-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
           # ربط الـ Middleware المسئول عن تحويل HTTP إلى HTTPS
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-to-https@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - snake-game.duckdns.org
      secretName: snake-game-tls # سيرفر cert-manager سيحفظ الشهادة بهذا الاسم
  rules:
    - host: snake-game.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
